parser.out
Grammar:

Rule 0     S' -> script
Rule 1     script -> <empty>
Rule 2     script -> code script
Rule 3     code -> expr
Rule 4     code -> var
Rule 5     code -> function
Rule 6     code -> element
Rule 7     element -> TRAIT NAME params  [precedence=left, level=5]
Rule 8     element -> NEUTRAL NAME params  [precedence=left, level=5]
Rule 9     element -> SEA NAME params  [precedence=left, level=5]
Rule 10    element -> PROVINCE NAME params  [precedence=left, level=5]
Rule 11    element -> NATION NAME params  [precedence=left, level=5]
Rule 12    var -> NAME ASSIGN expr
Rule 13    params -> <empty>
Rule 14    params -> param
Rule 15    params -> param , params
Rule 16    params -> ( params )
Rule 17    param -> NAME PARAMASSIGN expr
Rule 18    condition -> expr ELESS expr  [precedence=left, level=4]
Rule 19    condition -> expr EGREATER expr  [precedence=left, level=4]
Rule 20    condition -> expr LESS expr  [precedence=left, level=4]
Rule 21    condition -> expr GREATER expr  [precedence=left, level=4]
Rule 22    condition -> expr NOTEQUALS expr  [precedence=left, level=4]
Rule 23    condition -> expr EQUALS expr  [precedence=left, level=4]
Rule 24    condition -> NOT expr
Rule 25    condition -> expr XOR expr  [precedence=left, level=3]
Rule 26    condition -> expr OR expr  [precedence=left, level=3]
Rule 27    condition -> expr AND expr  [precedence=left, level=3]
Rule 28    expr -> expr ARROW expr
Rule 29    expr -> MINUS expr  [precedence=left, level=1]
Rule 30    expr -> PLUS expr  [precedence=left, level=1]
Rule 31    expr -> XMINUS expr
Rule 32    expr -> XPLUS expr
Rule 33    expr -> expr DIVIDE expr  [precedence=left, level=2]
Rule 34    expr -> expr MULTIPLY expr  [precedence=left, level=2]
Rule 35    expr -> expr MINUS expr  [precedence=left, level=1]
Rule 36    expr -> expr PLUS expr  [precedence=left, level=1]
Rule 37    expr -> ( expr )
Rule 38    expr -> condition
Rule 39    expr -> [ list_expr ]
Rule 40    expr -> BOOL  [precedence=left, level=6]
Rule 41    expr -> STRING
Rule 42    expr -> NUMBER
Rule 43    expr -> NAME  [precedence=left, level=5]
Rule 44    list_expr -> expr
Rule 45    list_expr -> <empty>
Rule 46    list_expr -> expr , list_expr
Rule 47    function -> WHILE ( condition ) { script }
Rule 48    function -> IF ( condition ) { script }
Rule 49    function -> ELSE { script }
Rule 50    function -> DISTRIBUTION NAME params { script }
Rule 51    function -> EVENT NAME params { script }
Rule 52    function -> SHOW ( expr )

Unused terminals:

    FOR

Terminals, with rules where they appear:

(                    : 16 37 47 48 52
)                    : 16 37 47 48 52
,                    : 15 46
AND                  : 27
ARROW                : 28
ASSIGN               : 12
BOOL                 : 40
DISTRIBUTION         : 50
DIVIDE               : 33
EGREATER             : 19
ELESS                : 18
ELSE                 : 49
EQUALS               : 23
EVENT                : 51
FOR                  : 
GREATER              : 21
IF                   : 48
LESS                 : 20
MINUS                : 29 35
MULTIPLY             : 34
NAME                 : 7 8 9 10 11 12 17 43 50 51
NATION               : 11
NEUTRAL              : 8
NOT                  : 24
NOTEQUALS            : 22
NUMBER               : 42
OR                   : 26
PARAMASSIGN          : 17
PLUS                 : 30 36
PROVINCE             : 10
SEA                  : 9
SHOW                 : 52
STRING               : 41
TRAIT                : 7
WHILE                : 47
XMINUS               : 31
XOR                  : 25
XPLUS                : 32
[                    : 39
]                    : 39
error                : 
{                    : 47 48 49 50 51
}                    : 47 48 49 50 51

Nonterminals, with rules where they appear:

code                 : 2
condition            : 38 47 48
element              : 6
expr                 : 3 12 17 18 18 19 19 20 20 21 21 22 22 23 23 24 25 25 26 26 27 27 28 28 29 30 31 32 33 33 34 34 35 35 36 36 37 44 46 52
function             : 5
list_expr            : 39 46
param                : 14 15
params               : 7 8 9 10 11 15 16 50 51
script               : 2 47 48 49 50 51 0
var                  : 4


state 0

    (0) S' -> . script
    (1) script -> .
    (2) script -> . code script
    (3) code -> . expr
    (4) code -> . var
    (5) code -> . function
    (6) code -> . element
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (12) var -> . NAME ASSIGN expr
    (47) function -> . WHILE ( condition ) { script }
    (48) function -> . IF ( condition ) { script }
    (49) function -> . ELSE { script }
    (50) function -> . DISTRIBUTION NAME params { script }
    (51) function -> . EVENT NAME params { script }
    (52) function -> . SHOW ( expr )
    (7) element -> . TRAIT NAME params
    (8) element -> . NEUTRAL NAME params
    (9) element -> . SEA NAME params
    (10) element -> . PROVINCE NAME params
    (11) element -> . NATION NAME params
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    $end            reduce using rule 1 (script -> .)
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ELSE            shift and go to state 20
    DISTRIBUTION    shift and go to state 21
    EVENT           shift and go to state 22
    SHOW            shift and go to state 23
    TRAIT           shift and go to state 24
    NEUTRAL         shift and go to state 25
    SEA             shift and go to state 26
    PROVINCE        shift and go to state 27
    NATION          shift and go to state 28
    NOT             shift and go to state 29

    script                         shift and go to state 1
    code                           shift and go to state 2
    expr                           shift and go to state 3
    var                            shift and go to state 4
    function                       shift and go to state 5
    element                        shift and go to state 6
    condition                      shift and go to state 12

state 1

    (0) S' -> script .


state 2

    (2) script -> code . script
    (1) script -> .
    (2) script -> . code script
    (3) code -> . expr
    (4) code -> . var
    (5) code -> . function
    (6) code -> . element
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (12) var -> . NAME ASSIGN expr
    (47) function -> . WHILE ( condition ) { script }
    (48) function -> . IF ( condition ) { script }
    (49) function -> . ELSE { script }
    (50) function -> . DISTRIBUTION NAME params { script }
    (51) function -> . EVENT NAME params { script }
    (52) function -> . SHOW ( expr )
    (7) element -> . TRAIT NAME params
    (8) element -> . NEUTRAL NAME params
    (9) element -> . SEA NAME params
    (10) element -> . PROVINCE NAME params
    (11) element -> . NATION NAME params
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    $end            reduce using rule 1 (script -> .)
    }               reduce using rule 1 (script -> .)
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ELSE            shift and go to state 20
    DISTRIBUTION    shift and go to state 21
    EVENT           shift and go to state 22
    SHOW            shift and go to state 23
    TRAIT           shift and go to state 24
    NEUTRAL         shift and go to state 25
    SEA             shift and go to state 26
    PROVINCE        shift and go to state 27
    NATION          shift and go to state 28
    NOT             shift and go to state 29

    code                           shift and go to state 2
    script                         shift and go to state 30
    expr                           shift and go to state 3
    var                            shift and go to state 4
    function                       shift and go to state 5
    element                        shift and go to state 6
    condition                      shift and go to state 12

state 3

    (3) code -> expr .
    (28) expr -> expr . ARROW expr
    (33) expr -> expr . DIVIDE expr
    (34) expr -> expr . MULTIPLY expr
    (35) expr -> expr . MINUS expr
    (36) expr -> expr . PLUS expr
    (18) condition -> expr . ELESS expr
    (19) condition -> expr . EGREATER expr
    (20) condition -> expr . LESS expr
    (21) condition -> expr . GREATER expr
    (22) condition -> expr . NOTEQUALS expr
    (23) condition -> expr . EQUALS expr
    (25) condition -> expr . XOR expr
    (26) condition -> expr . OR expr
    (27) condition -> expr . AND expr
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    XMINUS          reduce using rule 3 (code -> expr .)
    XPLUS           reduce using rule 3 (code -> expr .)
    (               reduce using rule 3 (code -> expr .)
    [               reduce using rule 3 (code -> expr .)
    BOOL            reduce using rule 3 (code -> expr .)
    STRING          reduce using rule 3 (code -> expr .)
    NUMBER          reduce using rule 3 (code -> expr .)
    NAME            reduce using rule 3 (code -> expr .)
    WHILE           reduce using rule 3 (code -> expr .)
    IF              reduce using rule 3 (code -> expr .)
    ELSE            reduce using rule 3 (code -> expr .)
    DISTRIBUTION    reduce using rule 3 (code -> expr .)
    EVENT           reduce using rule 3 (code -> expr .)
    SHOW            reduce using rule 3 (code -> expr .)
    TRAIT           reduce using rule 3 (code -> expr .)
    NEUTRAL         reduce using rule 3 (code -> expr .)
    SEA             reduce using rule 3 (code -> expr .)
    PROVINCE        reduce using rule 3 (code -> expr .)
    NATION          reduce using rule 3 (code -> expr .)
    NOT             reduce using rule 3 (code -> expr .)
    $end            reduce using rule 3 (code -> expr .)
    }               reduce using rule 3 (code -> expr .)
    ARROW           shift and go to state 31
    DIVIDE          shift and go to state 32
    MULTIPLY        shift and go to state 33
    MINUS           shift and go to state 34
    PLUS            shift and go to state 35
    ELESS           shift and go to state 36
    EGREATER        shift and go to state 37
    LESS            shift and go to state 38
    GREATER         shift and go to state 39
    NOTEQUALS       shift and go to state 40
    EQUALS          shift and go to state 41
    XOR             shift and go to state 42
    OR              shift and go to state 43
    AND             shift and go to state 44


state 4

    (4) code -> var .
    MINUS           reduce using rule 4 (code -> var .)
    PLUS            reduce using rule 4 (code -> var .)
    XMINUS          reduce using rule 4 (code -> var .)
    XPLUS           reduce using rule 4 (code -> var .)
    (               reduce using rule 4 (code -> var .)
    [               reduce using rule 4 (code -> var .)
    BOOL            reduce using rule 4 (code -> var .)
    STRING          reduce using rule 4 (code -> var .)
    NUMBER          reduce using rule 4 (code -> var .)
    NAME            reduce using rule 4 (code -> var .)
    WHILE           reduce using rule 4 (code -> var .)
    IF              reduce using rule 4 (code -> var .)
    ELSE            reduce using rule 4 (code -> var .)
    DISTRIBUTION    reduce using rule 4 (code -> var .)
    EVENT           reduce using rule 4 (code -> var .)
    SHOW            reduce using rule 4 (code -> var .)
    TRAIT           reduce using rule 4 (code -> var .)
    NEUTRAL         reduce using rule 4 (code -> var .)
    SEA             reduce using rule 4 (code -> var .)
    PROVINCE        reduce using rule 4 (code -> var .)
    NATION          reduce using rule 4 (code -> var .)
    NOT             reduce using rule 4 (code -> var .)
    $end            reduce using rule 4 (code -> var .)
    }               reduce using rule 4 (code -> var .)


state 5

    (5) code -> function .
    MINUS           reduce using rule 5 (code -> function .)
    PLUS            reduce using rule 5 (code -> function .)
    XMINUS          reduce using rule 5 (code -> function .)
    XPLUS           reduce using rule 5 (code -> function .)
    (               reduce using rule 5 (code -> function .)
    [               reduce using rule 5 (code -> function .)
    BOOL            reduce using rule 5 (code -> function .)
    STRING          reduce using rule 5 (code -> function .)
    NUMBER          reduce using rule 5 (code -> function .)
    NAME            reduce using rule 5 (code -> function .)
    WHILE           reduce using rule 5 (code -> function .)
    IF              reduce using rule 5 (code -> function .)
    ELSE            reduce using rule 5 (code -> function .)
    DISTRIBUTION    reduce using rule 5 (code -> function .)
    EVENT           reduce using rule 5 (code -> function .)
    SHOW            reduce using rule 5 (code -> function .)
    TRAIT           reduce using rule 5 (code -> function .)
    NEUTRAL         reduce using rule 5 (code -> function .)
    SEA             reduce using rule 5 (code -> function .)
    PROVINCE        reduce using rule 5 (code -> function .)
    NATION          reduce using rule 5 (code -> function .)
    NOT             reduce using rule 5 (code -> function .)
    $end            reduce using rule 5 (code -> function .)
    }               reduce using rule 5 (code -> function .)


state 6

    (6) code -> element .
    MINUS           reduce using rule 6 (code -> element .)
    PLUS            reduce using rule 6 (code -> element .)
    XMINUS          reduce using rule 6 (code -> element .)
    XPLUS           reduce using rule 6 (code -> element .)
    (               reduce using rule 6 (code -> element .)
    [               reduce using rule 6 (code -> element .)
    BOOL            reduce using rule 6 (code -> element .)
    STRING          reduce using rule 6 (code -> element .)
    NUMBER          reduce using rule 6 (code -> element .)
    NAME            reduce using rule 6 (code -> element .)
    WHILE           reduce using rule 6 (code -> element .)
    IF              reduce using rule 6 (code -> element .)
    ELSE            reduce using rule 6 (code -> element .)
    DISTRIBUTION    reduce using rule 6 (code -> element .)
    EVENT           reduce using rule 6 (code -> element .)
    SHOW            reduce using rule 6 (code -> element .)
    TRAIT           reduce using rule 6 (code -> element .)
    NEUTRAL         reduce using rule 6 (code -> element .)
    SEA             reduce using rule 6 (code -> element .)
    PROVINCE        reduce using rule 6 (code -> element .)
    NATION          reduce using rule 6 (code -> element .)
    NOT             reduce using rule 6 (code -> element .)
    $end            reduce using rule 6 (code -> element .)
    }               reduce using rule 6 (code -> element .)


state 7

    (29) expr -> MINUS . expr
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    expr                           shift and go to state 45
    condition                      shift and go to state 12

state 8

    (30) expr -> PLUS . expr
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    expr                           shift and go to state 47
    condition                      shift and go to state 12

state 9

    (31) expr -> XMINUS . expr
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    expr                           shift and go to state 48
    condition                      shift and go to state 12

state 10

    (32) expr -> XPLUS . expr
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    expr                           shift and go to state 49
    condition                      shift and go to state 12

state 11

    (37) expr -> ( . expr )
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    expr                           shift and go to state 50
    condition                      shift and go to state 12

state 12

    (38) expr -> condition .
    ARROW           reduce using rule 38 (expr -> condition .)
    DIVIDE          reduce using rule 38 (expr -> condition .)
    MULTIPLY        reduce using rule 38 (expr -> condition .)
    MINUS           reduce using rule 38 (expr -> condition .)
    PLUS            reduce using rule 38 (expr -> condition .)
    ELESS           reduce using rule 38 (expr -> condition .)
    EGREATER        reduce using rule 38 (expr -> condition .)
    LESS            reduce using rule 38 (expr -> condition .)
    GREATER         reduce using rule 38 (expr -> condition .)
    NOTEQUALS       reduce using rule 38 (expr -> condition .)
    EQUALS          reduce using rule 38 (expr -> condition .)
    XOR             reduce using rule 38 (expr -> condition .)
    OR              reduce using rule 38 (expr -> condition .)
    AND             reduce using rule 38 (expr -> condition .)
    XMINUS          reduce using rule 38 (expr -> condition .)
    XPLUS           reduce using rule 38 (expr -> condition .)
    (               reduce using rule 38 (expr -> condition .)
    [               reduce using rule 38 (expr -> condition .)
    BOOL            reduce using rule 38 (expr -> condition .)
    STRING          reduce using rule 38 (expr -> condition .)
    NUMBER          reduce using rule 38 (expr -> condition .)
    NAME            reduce using rule 38 (expr -> condition .)
    WHILE           reduce using rule 38 (expr -> condition .)
    IF              reduce using rule 38 (expr -> condition .)
    ELSE            reduce using rule 38 (expr -> condition .)
    DISTRIBUTION    reduce using rule 38 (expr -> condition .)
    EVENT           reduce using rule 38 (expr -> condition .)
    SHOW            reduce using rule 38 (expr -> condition .)
    TRAIT           reduce using rule 38 (expr -> condition .)
    NEUTRAL         reduce using rule 38 (expr -> condition .)
    SEA             reduce using rule 38 (expr -> condition .)
    PROVINCE        reduce using rule 38 (expr -> condition .)
    NATION          reduce using rule 38 (expr -> condition .)
    NOT             reduce using rule 38 (expr -> condition .)
    $end            reduce using rule 38 (expr -> condition .)
    }               reduce using rule 38 (expr -> condition .)
    )               reduce using rule 38 (expr -> condition .)
    ,               reduce using rule 38 (expr -> condition .)
    ]               reduce using rule 38 (expr -> condition .)
    {               reduce using rule 38 (expr -> condition .)


state 13

    (39) expr -> [ . list_expr ]
    (44) list_expr -> . expr
    (45) list_expr -> .
    (46) list_expr -> . expr , list_expr
    (28) expr -> . expr ARROW expr
    (29) expr -> . MINUS expr
    (30) expr -> . PLUS expr
    (31) expr -> . XMINUS expr
    (32) expr -> . XPLUS expr
    (33) expr -> . expr DIVIDE expr
    (34) expr -> . expr MULTIPLY expr
    (35) expr -> . expr MINUS expr
    (36) expr -> . expr PLUS expr
    (37) expr -> . ( expr )
    (38) expr -> . condition
    (39) expr -> . [ list_expr ]
    (40) expr -> . BOOL
    (41) expr -> . STRING
    (42) expr -> . NUMBER
    (43) expr -> . NAME
    (18) condition -> . expr ELESS expr
    (19) condition -> . expr EGREATER expr
    (20) condition -> . expr LESS expr
    (21) condition -> . expr GREATER expr
    (22) condition -> . expr NOTEQUALS expr
    (23) condition -> . expr EQUALS expr
    (24) condition -> . NOT expr
    (25) condition -> . expr XOR expr
    (26) condition -> . expr OR expr
    (27) condition -> . expr AND expr
    ]               reduce using rule 45 (list_expr -> .)
    MINUS           shift and go to state 7
    PLUS            shift and go to state 8
    XMINUS          shift and go to state 9
    XPLUS           shift and go to state 10
    (               shift and go to state 11
    [               shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 46
    NOT             shift and go to state 29

    list_expr                      shift and go to state 51
    expr                           shift and go to state 52
    condition                      shift and go to state 12

state 14

    (40) expr -> BOOL .
    ARROW           reduce using rule 40 (expr -> BOOL .)
    DIVIDE          reduce using rule 40 (expr -> BOOL .)
    MULTIPLY        reduce using rule 40 (expr -> BOOL .)
    MINUS           reduce using rule 40 (expr -> BOOL .)
    PLUS            reduce using rule 40 (expr -> BOOL .)
    ELESS           reduce using rule 40 (expr -> BOOL .)
    EGREATER        reduce using rule 40 (expr -> BOOL .)
    LESS            reduce using rule 40 (expr -> BOOL .)
    GREATER         reduce using rule 40 (expr -> BOOL .)
    NOTEQUALS       reduce using rule 40 (expr -> BOOL .)
    EQUALS          reduce using rule 40 (expr -> BOOL .)
    XOR             reduce using rule 40 (expr -> BOOL .)
    OR              reduce using rule 40 (expr -> BOOL .)
    AND             reduce using rule 40 (expr -> BOOL .)
    XMINUS          reduce using rule 40 (expr -> BOOL .)
    XPLUS           reduce using rule 40 (expr -> BOOL .)
    (               reduce using rule 40 (expr -> BOOL .)
    [               reduce using rule 40 (expr -> BOOL .)
    BOOL            reduce using rule 40 (expr -> BOOL .)
    STRING          reduce using rule 40 (expr -> BOOL .)
    NUMBER          reduce using rule 40 (expr -> BOOL .)
    NAME            reduce using rule 40 (expr -> BOOL .)
    WHILE           reduce using rule 40 (expr -> BOOL .)
    IF              reduce using rule 40 (expr -> BOOL .)
    ELSE            reduce using rule 40 (expr -> BOOL .)
    DISTRIBUTION    reduce using rule 40 (expr -> BOOL .)
    EVENT           reduce using rule 40 (expr -> BOOL .)
    SHOW            reduce using rule 40 (expr -> BOOL .)
    TRAIT           reduce using rule 40 (expr -> BOOL .)
    NEUTRAL         reduce using rule 40 (expr -> BOOL .)
    SEA             reduce using rule 40 (expr -> BOOL .)
    PROVINCE        reduce using rule 40 (expr -> BOOL .)
    NATION          reduce using rule 40 (expr -> BOOL .)
    NOT             reduce using rule 40 (expr -> BOOL .)
    $end            reduce using rule 40 (expr -> BOOL .)
    }               reduce using rule 40 (expr -> BOOL .)
    )               reduce using rule 40 (expr -> BOOL .)
    ,               reduce using rule 40 (expr -> BOOL .)
    ]               reduce using rule 40 (expr -> BOOL .)
    {               reduce using rule 40 (expr -> BOOL .)


state 15

    (41) expr -> STRING .
    ARROW           reduce using rule 41 (expr -> STRING .)
    DIVIDE          reduce using rule 41 (expr -> STRING .)
    MULTIPLY        reduce using rule 41 (expr -> STRING .)
    MINUS           reduce using rule 41 (expr -> STRING .)
    PLUS            reduce using rule 41 (expr -> STRING .)
    ELESS           reduce using rule 41 (expr -> STRING .)
    EGREATER        reduce using rule 41 (expr -> STRING .)
    LESS            reduce using rule 41 (expr -> STRING .)
    GREATER         reduce using rule 41 (expr -> STRING .)
    NOTEQUALS       reduce using rule 41 (expr -> STRING .)
    EQUALS          reduce using rule 41 (expr -> STRING .)
    XOR             reduce using rule 41 (expr -> STRING .)
    OR              reduce using rule 41 (expr -> STRING .)
    AND             reduce using rule 41 (expr -> STRING .)
    XMINUS          reduce using rule 41 (expr -> STRING .)
    XPLUS           reduce using rule 41 (expr -> STRING .)
    (               reduce using rule 41 (expr -> STRING .)
    [               reduce using rule 41 (expr -> STRING .)
    BOOL            reduce using rule 41 (expr -> STRING .)
    STRING          reduce using rule 41 (expr -> STRING .)
    NUMBER          reduce using rule 41 (expr -> STRING .)
    NAME            reduce using rule 41 (expr -> STRING .)
    WHILE           reduce using rule 41 (expr -> STRING .)
    IF              reduce using rule 41 (expr -> STRING .)
    ELSE            reduce using rule 41 (expr -> STRING .)
    DISTRIBUTION    reduce using rule 41 (expr -> STRING .)
    EVENT           reduce using rule 41 (expr -> STRING .)
    SHOW            reduce using rule 41 (expr -> STRING .)
    TRAIT           reduce using rule 41 (expr -> STRING .)
    NEUTRAL         reduce using rule 41 (expr -> STRING .)
    SEA             reduce using rule 41 (expr -> STRING .)
    PROVINCE        reduce using rule 41 (expr -> STRING .)
    NATION          reduce using rule 41 (expr -> STRING .)
    NOT             reduce using rule 41 (expr -> STRING .)
    $end            reduce using rule 41 (expr -> STRING .)
    }               reduce using rule 41 (expr -> STRING .)
    )               reduce using rule 41 (expr -> STRING .)
    ,               reduce using rule 41 (expr -> STRING .)
    ]               reduce using rule 41 (expr -> STRING .)
    {               reduce using rule 41 (expr -> STRING .)


state 16
